--- a/src/Componentes/Home.css
+++ b/src/Componentes/Home.css
@@ -3,7 +3,7 @@
     color: white;
 }
 .div{
-    background-color: black;
+    background-color: #282c34;
     color: white;
     align-items: center;
     justify-content: center;
